[project]
name = "ricoh-supply-cli"
version = "0.0.1"
description = "Python CLI tool that allows checking Ricoh printers supply/toner status."
authors = [
    {name = "angelside", email = "package@jusoft.com"},
]
dependencies = [
    "easysnmp>=0.2.5",
    "typer>=0.4.2",
]
requires-python = ">=3.10"
license = {text = "MIT"}

[tool.pdm]

[build-system]
requires = ["pdm-pep517>=0.12.0"]
build-backend = "pdm.pep517.api"
